--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,23 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "echo",
+            "label": "cmake",
             "type": "shell",
-            "command": "echo Hello"
+            "options": {
+                "cwd": "${workspaceRoot}/build"
+            },
+            "command": "cmake -G 'Unix Makefiles' -DCMAKE_BUILD_TYPE=Debug ..",
+            // "command": "echo ${cwd}",
+            "group": "build"
+        },
+        {
+            "label": "make",
+            "type": "shell",
+            "command": "make -j 8",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
