Fixed make task with adding cwd

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,9 @@
         {
             "label": "make",
             "type": "shell",
+            "options": {
+                "cwd": "${workspaceRoot}/build"
+            },
             "command": "make -j 8",
             "group": {
                 "kind": "build",
